Refactor AuditLogManager process execution for security
- Replaced Runtime.getRuntime().exec() with ProcessBuilder
- Separated mysqldump flags and values into distinct arguments to prevent argument injection
- Injected database password via MYSQL_PWD environment variable instead of command-line argument to prevent exposure in process monitors (like `ps`)

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>