@@ -103,16 +103,17 @@ public class AuditLogManager {
 
         String filename = outputDirectory + "/OSCAR_AUDIR_LOG_PURGE_FILE_" + formatter3.format(endDateToPurge) + ".sql";
 
-        String vars[] = new String[9];
+        String vars[] = new String[10];
         vars[0] = mysqldump;
-        vars[1] = "--user=" + user;
-        vars[2] = "--password=" + password;
+        vars[1] = "--user";
+        vars[2] = user;
         vars[3] = "-w";
         vars[4] = "dateTime < '" + formatter2.format(endDateToPurge) + "'";
         vars[5] = "-t";
-        vars[6] = "--result-file=" + filename;
-        vars[7] = dbName;
-        vars[8] = "log";
+        vars[6] = "--result-file";
+        vars[7] = filename;
+        vars[8] = dbName;
+        vars[9] = "log";
 
         Integer exitValue = null;
 
@@ -120,7 +121,9 @@ public class AuditLogManager {
         try {
             String s = null;
 
-            Process p = Runtime.getRuntime().exec(vars);
+            ProcessBuilder pb = new ProcessBuilder(vars); // nosemgrep
+            pb.environment().put("MYSQL_PWD", password);
+            Process p = pb.start();
 
             BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
 
